--- a/app/views/mypage/cards/new.html.haml
+++ b/app/views/mypage/cards/new.html.haml
@@ -1,5 +1,3 @@
-%h1.HeaderField Header 実装エリア
-
 .MyPage
   = render "items/sidebar"
 
@@ -32,7 +30,7 @@
             .CardBox--ele
               = f.select :exp_month, [["01",1],["02",2],["03",3],["04",4],["05",5],["06",6],["07",7],["08",8],["09",9],["10",10],["11",11],["12",12]],{} , class: 'input-select'
               月
-              = f.select :exp_year, [["20",2020],["21",2021],["22",2022],["23",2023],["24",2024],["25",2025],["26",2026],["27",2027],["28",2028],["29",2029],["30"],2030],{} , class: 'input-select'
+              = f.select :exp_year, [["19",2019],["20",2020],["21",2021],["22",2022],["23",2023],["24",2024],["25",2025],["26",2026],["27",2027],["28",2028],["29",2029]],{} , class: 'input-select'
               年
           .CardBox
             .CardBox--ele
@@ -42,3 +40,4 @@
               = f.text_field :cvc, type: 'text', class: 'input-text', placeholder: 'カード背面4桁もしくは3桁の番号', maxlength: "4"
           .BodyCard__inner--btn
             = f.submit '追加する', class: 'Button', id: 'token_submit'
+
