--- a/app/assets/stylesheets/modules/card.scss
+++ b/app/assets/stylesheets/modules/card.scss
@@ -37,3 +37,20 @@
 .card_image{
   height: 20px;
 }
+
+.BodyCard__Info{
+  width: 70%;
+  margin: 0 auto 50px;
+  .BodyCard__Info--table{
+    border-collapse: separate;
+    padding: 25px 25px;
+    tbody{
+      tr{
+        td{
+          padding: 10px 20px;
+          border-bottom: 1px solid #bfc2c2;
+        }
+      }
+    }
+  }
+}
