--- a/app/views/items/mypage.html.haml
+++ b/app/views/items/mypage.html.haml
@@ -1,6 +1,21 @@
-%h1.HeaderField Header 実装エリア
-
 .MyPage
   = render "sidebar"
 
   .MyPage__MainField
+    .MyPage__MainField__Image
+      .MyPage__MainField__Image--smile
+        = image_tag ('mypage/smile.png'), class: 'image-smile'
+      .MyPage__MainField__Image--faivorit
+        いいね  ⭐️12
+    -# .MyPage__M
+    .ListingMenu
+      %ul.ListingMenu__Tab
+        = link_to "#", class: "menu_item no-underline  active" do
+          %li お知らせ
+        = link_to "#", class: "menu_item no-underline" do
+          %li やることリスト
+      %ul.Contents
+        %li.Content.show
+          メッセージはありません
+        %li.Content
+          メッセージはありません
