--- a/app/views/mypage/cards/index.html.haml
+++ b/app/views/mypage/cards/index.html.haml
@@ -1,5 +1,3 @@
-%h1.HeaderField Header 実装エリア
-
 .MyPage
   = render "items/sidebar"
 
@@ -8,5 +6,32 @@
       クレジットカード情報
       %hr
     .BodyCard
+      .BodyCard__Info
+        = form_with model: @card, url: mypage_cards_path, local: true do |f|
+          %table.BodyCard__Info--table
+            %tbody
+              %tr
+                %td
+                  = f.radio_button :"", class: '', checked: true
+                %td
+                  = image_tag ('cards/visa.svg'), class: 'card_image'
+                  %br
+                  カード番号：************1234
+                  %br
+                  有効期限　：03/21
+                %td
+                  = link_to "削除する", new_mypage_card_path, class: 'btn-smole'
+              %tr
+                %td
+                  = f.radio_button :"", class: ''
+                %td
+                  = image_tag ('cards/jcb.svg'), class: 'card_image'
+                  %br
+                  カード番号：************4242
+                  %br
+                  有効期限　：01/22
+                %td
+                  = link_to "削除する", "#", class: 'btn-smole'
+
       .BodyCard--btn
         = link_to "クレジットカードを追加する", new_mypage_card_path, class: 'Button'
