--- a/app/views/mypage/purchasers/index.html.haml
+++ b/app/views/mypage/purchasers/index.html.haml
@@ -1,5 +1,3 @@
-%h1.HeaderField Header 実装エリア
-
 .MyPage
   = render "items/sidebar"
 
@@ -14,6 +12,6 @@
           %li 過去の取引
       %ul.Contents
         %li.Content.show
-          取引中 / 商品一覧
+          = render "mypage/listings/products_list"
         %li.Content
-          過去の取引 / 商品一覧
+          = render "mypage/listings/products_list"
