--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -94,7 +94,7 @@
   .PickupCategory__Products
     .ProductBox
       .ProductBox__Image
-        = image_tag ('topimage/a005.png'), class: "product_image"
+        = image_tag ('topimage/IMG_9072.jpg'), class: "product_image"
       .ProductBox__Info
         .ProductBox__Info__Name
           product1
@@ -156,7 +156,7 @@
   .PickupCategory__Products
     .ProductBox
       .ProductBox__Image
-        = image_tag ('topimage/a003.png'), class: "product_image"
+        = image_tag ('topimage/IMG_9072.jpg'), class: "product_image"
       .ProductBox__Info
         .ProductBox__Info__Name
           product1
