jsファイル修正

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,63 +1,64 @@
 .InputForm
-  -# = form_with model:@product, local: true do |f| 
-  .InputForm__Title
-    商品登録
-    %hr
-  = form_with model: @product, class: "form", id: "product-form" do |f|
-    .form-image
-      .form-image__title
-        %label 出品画像
-        %span 必須
-      .form-image__text 最大10枚までアップロードできます
-      = f.fields_for :images do |image|
-        .clearfix
-          // 写真のプレビューとインプットボタンのul
-          %ul#previews
-            %li.input
-              // 画像を取り込むインプットボタン
-              %label.upload-label
-                .upload-label__text
-                  ドラッグアンドドロップ
-                  %br
-                  またはクリックしてファイルをアップロード
-                  .input-area
-                    = image.file_field :name, class: "hidden image_upload"
+  = form_with model:@product, local: true do |f| 
+    .InputForm__Title
+      商品登録
+      %hr
+    -# = form_with model: @product, class: "form", id: "product-form" do |f|
+    -#   .form-image
+    -#     .form-image__title
+    -#       %label 出品画像
+    -#       %span 必須
+    -#     -# .form-image__text 最大10枚までアップロードできます
+    -#     = f.fields_for :image do |op|
+    -#       = render 'image_fields', s: op
+    -#       .links
+    -#         = link_to_add_association '＋別の商品を追加', f, :image
+
+
+
+      -# Ver2.0
+    = f.fields_for :images do |image|
+      .clearfix
+        // 写真のプレビューとインプットボタンのul
+        %ul#previews
+          %li.input
+            // 画像を取り込むインプットボタン
+            %label.upload-label
+              .upload-label__text
+                ドラッグアンドドロップ
+                %br
+                またはクリックしてファイルをアップロード
+                .input-area
+                  = image.file_field :name, class: "hidden image_upload"
+
+
+      -# Ver1.1
+      -# .InputForm__ImageField
+      -#   #image-box
+      -#     #previews
+      -#       - if @product.persisted?
+      -#         = @product.images.each_with_index do |image, i|
+      -#           = image_tag image.image.url, data: { index: i }, width: "100", height: '100'
+
+      -#     = f.fields_for :images do |image|
+      -#       .js-file_group{"data-index" => "#{image.index}"}
+      -#         = image.label :image, class: 'js-file js-file_group__Image' do
+      -#           = icon('fas', 'camera js-file_group__Image--icon')
+      -#           = image.file_field :image, class: 'js-file_group__Image--file'
+      -#         %br
+      -#         %span.js-remove.btn-smole 削除
+      -#       - if @product.persisted?
+      -#         = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
+
+      -#     - if @product.persisted?
+      -#       .js-file_group{"data-index" => "#{@product.images.count}"}
+      -#         = file_field_tag :image, name: "product[images_attributes][#{@product.images.count}][image]", class: 'js-file'
+              -# .js-remove 削除
 
 
 
 
-
-
-
-
-
-
-    -# .InputForm__ImageField
-    -#   #image-box
-    -#     #previews
-    -#       - if @product.persisted?
-    -#         = @product.images.each_with_index do |image, i|
-    -#           = image_tag image.image.url, data: { index: i }, width: "100", height: '100'
-
-    -#     = f.fields_for :images do |image|
-    -#       .js-file_group{"data-index" => "#{image.index}"}
-    -#         = image.label :image, class: 'js-file js-file_group__Image' do
-    -#           = icon('fas', 'camera js-file_group__Image--icon')
-    -#           = image.file_field :image, class: 'js-file_group__Image--file'
-    -#         %br
-    -#         %span.js-remove.btn-smole 削除
-    -#       - if @product.persisted?
-    -#         = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
-
-    -#     - if @product.persisted?
-    -#       .js-file_group{"data-index" => "#{@product.images.count}"}
-    -#         = file_field_tag :image, name: "product[images_attributes][#{@product.images.count}][image]", class: 'js-file'
-            -# .js-remove 削除
-
-
-
-
-
+      -# Ver1.0
       -# #image-box
       -#   #previews
       -#     - if @product.persisted?
@@ -97,7 +98,6 @@
             = f.label :kind_id, "カテゴリー"
             %span 必須
           %td
-            -# = f.collection_select(:target_id, code.all, :code_no, :code_value,{prompt: ""}, {class: "form-control input-sm"})
             = f.collection_select :kind_id, Kind.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
         %tr
           %th
