--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -79,11 +79,22 @@
             %p.notes
               相手のことを考えて丁寧なコメントを心がけましょう。
               %br/
-              不快な言葉遣いなどは利用制限や退会処分となることがあります。ります。
-
+              不快な言葉遣いなどは利用制限や退会処分となることがあります。
+            %br/
+            %button.commentBtn
+              = icon('fa', 'comment')
+              コメントする
       %ul.pageMove
+        %li
+          %a{href: "#"}
+            = icon('fa', 'angle-left')
+            前の商品
+        %li
+          %a{href: "#"}
+            次の商品
+            = icon('fa', 'angle-right')
 
-
-      .main__showMain__moreItems
-
+      .main__showMain__contents__moreItems
+        %a{href:"#"}
+          食べ物をもっと見る
 
