--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,9 +26,9 @@
               = link_to "ブランド", "#", class: "brand"
           .Headfield__Bottom__right
             .Headfield__Bottom__right__menu
-              = link_to "ログイン", "#", class: "login"
+              = link_to "ログイン", new_user_session_path, class: "login"
             .Headfield__Bottom__right__menu
-              = link_to "新規会員登録", "#", class: "new"
+              = link_to "新規会員登録", new_user_registration_path, class: "new"
     .FloatBtn
       .FloatBtn__Text
         出品する
