application.html.haml　ログイン時と非ログイン時で、ヘッダーが切り替わる

--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -74,6 +74,10 @@ header {
         justify-content: flex-end;
         line-height: 32px;
         &__menu {
+          .mypage {
+            text-decoration: none;
+            color: #333;
+          }
           .login {
             text-decoration: none;
             color: #333;
