トップページ修正

--- a/app/assets/stylesheets/modules/top_page.scss
+++ b/app/assets/stylesheets/modules/top_page.scss
@@ -1,7 +1,7 @@
 
 .MainPicture {
   height: 560px;
-  width: 100%;
+  width: 1320px;
   padding: 0 60px;
   display: flex;
   background-image: image-url('topimage/bg-mainVisual-pict_pc.jpg');
@@ -35,7 +35,7 @@
 }
 .MainIntroduce {
   padding: 60px 20px;
-  width: 100%;
+  width: 1400px;
   height: 560px;
   position: relative;
   &__Title {
