--- a/app/assets/stylesheets/modules/body_application.scss
+++ b/app/assets/stylesheets/modules/body_application.scss
@@ -1,10 +1,3 @@
-body{
-  // background-color: rgb(238, 235, 235);
-  // min-height: calc(100vh - 100px); 
-  // height:auto !important; 
-  // height: calc(100vh - 100px);
-  // margin-top: 100px;
-}
 .container{
   background-color: rgb(238, 235, 235);
   min-height: calc(100vh - 100px); 
@@ -39,4 +32,18 @@ body{
 }
 .Button:active {
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+}
+
+.form-text{
+  height: 40px;
+  width: 100%;
+}
+.form-area{
+  height: 120px;
+  width: 100%;
+}
+.form-select{
+  height: 40px;
+  padding: 10px, 20px;
+  width: 100%;
 }
