--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,142 +1,89 @@
-.InputForm
-  = form_with model:@product, local: true do |f| 
-    .InputForm__Title
-      商品登録
+.main
+  %section.main__block
+    = form_with model:@product, local:true do |f|
+      %h2.sell__block__head
+        商品登録
       %hr
-    -# = form_with model: @product, class: "form", id: "product-form" do |f|
-    -#   .form-image
-    -#     .form-image__title
-    -#       %label 出品画像
-    -#       %span 必須
-    -#     -# .form-image__text 最大10枚までアップロードできます
-    -#     = f.fields_for :image do |op|
-    -#       = render 'image_fields', s: op
-    -#       .links
-    -#         = link_to_add_association '＋別の商品を追加', f, :image
+      .sell__block__form
+        .sell__block__form__upload
+          %h3.sell__block__form__upload__head
+            出品画像
+            %span.require 必須
+          %p 最大5枚までアップロードできます
+          .post__drop__box__container
+            .prev-content
+            .label-content
+              %label{for: "product_images_attributes_0_image", class: "label-box", id: "label-box--0"}
+                %pre.label-box__text-visible クリックしてファイルをアップロード
+            .hidden-content
+              = f.fields_for :images do |i|
+                = i.file_field :image, class: "hidden-field"
+                %input{class:"hidden-field", type: "file", name: "product[images_attributes][1][image]", id: "product_images_attributes_1_image" }
+                %input{class:"hidden-field", type: "file", name: "product[images_attributes][2][image]", id: "product_images_attributes_2_image" }
+                %input{class:"hidden-field", type: "file", name: "product[images_attributes][3][image]", id: "product_images_attributes_3_image" }
+                %input{class:"hidden-field", type: "file", name: "product[images_attributes][4][image]", id: "product_images_attributes_4_image" }
 
+        .sell__block__form__name
+          %table.form-group__name
+            %tbody
+              %tr
+                %th
+                  = f.label :name, "商品名"
+                  %span 必須
+                %td
+                  = f.text_field :name, class: 'form-text', placeholder: ''
+              %tr
+                %th
+                  = f.label :introduce, "商品の説明"
+                  %span 必須
+                %td
+                  = f.text_area :introduce, class: 'form-area', placeholder: ''
 
+              %tr
+                %th
+                  = f.label :kind_id, "カテゴリー"
+                  %span 必須
+                %td
+                  = f.collection_select :kind_id, Kind.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
+              %tr
+                %th
+                  = f.label :brand_id, "ブランド"
+                  %span 必須
+                %td
+                  = f.collection_select :brand_id, Brand.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
+              %tr
+                %th
+                  = f.label :condition_id, "商品の状態"
+                  %span 必須
+                %td
+                  = f.collection_select :condition_id, Condition.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
 
-      -# Ver2.0
-    = f.fields_for :images do |image|
-      .clearfix
-        // 写真のプレビューとインプットボタンのul
-        %ul#previews
-          %li.input
-            // 画像を取り込むインプットボタン
-            %label.upload-label
-              .upload-label__text
-                ドラッグアンドドロップ
-                %br
-                またはクリックしてファイルをアップロード
-                .input-area
-                  = image.file_field :name, class: "hidden image_upload"
+              %tr
+                %th
+                  = f.label :postage_id, "配送料の負担"
+                  %span 必須
+                %td
+                  = f.collection_select :postage_id, Postage.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
+              %tr
+                %th
+                  = f.label :shipment_id, "発送までの日数"
+                  %span 必須
+                %td
+                  = f.collection_select :shipment_id, Shipment.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
+              %tr
+                %th
+                  = f.label :prefecture_id, "発送元の地域"
+                  %span 必須
+                %td
+                  = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
 
+              %tr
+                %th
+                  = f.label :price, "価格"
+                  %span 必須
+                %td
+                  = f.number_field :price, class: 'form-text', placeholder: ''
 
-      -# Ver1.1
-      -# .InputForm__ImageField
-      -#   #image-box
-      -#     #previews
-      -#       - if @product.persisted?
-      -#         = @product.images.each_with_index do |image, i|
-      -#           = image_tag image.image.url, data: { index: i }, width: "100", height: '100'
-
-      -#     = f.fields_for :images do |image|
-      -#       .js-file_group{"data-index" => "#{image.index}"}
-      -#         = image.label :image, class: 'js-file js-file_group__Image' do
-      -#           = icon('fas', 'camera js-file_group__Image--icon')
-      -#           = image.file_field :image, class: 'js-file_group__Image--file'
-      -#         %br
-      -#         %span.js-remove.btn-smole 削除
-      -#       - if @product.persisted?
-      -#         = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
-
-      -#     - if @product.persisted?
-      -#       .js-file_group{"data-index" => "#{@product.images.count}"}
-      -#         = file_field_tag :image, name: "product[images_attributes][#{@product.images.count}][image]", class: 'js-file'
-              -# .js-remove 削除
-
-
-
-
-      -# Ver1.0
-      -# #image-box
-      -#   #previews
-      -#     - if @product.persisted?
-      -#       = @product.images.each_with_index do |image, i|
-      -#         = image_tag image.image.url, data: { index: i }, width: "100", height: '100'
-
-      -#   = f.fields_for :images do |image|
-      -#     .js-file_group{"data-index" => "#{image.index}"}
-      -#       = image.file_field :image, class: 'js-file'
-      -#       %br
-      -#       %span.js-remove 削除
-      -#     - if @product.persisted?
-      -#       = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
-
-      -#   - if @product.persisted?
-      -#     .js-file_group{"data-index" => "#{@product.images.count}"}
-      -#       = file_field_tag :image, name: "product[images_attributes][#{@product.images.count}][image]", class: 'js-file'
-      -#       .js-remove 削除
-    %hr
-    %table.InputForm__table
-      %tbody
-        %tr
-          %th
-            = f.label :name, "商品名"
-            %span 必須
-          %td
-            = f.text_field :name, class: 'form-text', placeholder: ''
-        %tr
-          %th
-            = f.label :introduce, "商品の説明"
-            %span 必須
-          %td
-            = f.text_area :introduce, class: 'form-area', placeholder: ''
-
-        %tr
-          %th
-            = f.label :kind_id, "カテゴリー"
-            %span 必須
-          %td
-            = f.collection_select :kind_id, Kind.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
-        %tr
-          %th
-            = f.label :brand_id, "ブランド"
-            %span 必須
-          %td
-            = f.collection_select :brand_id, Brand.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
-        %tr
-          %th
-            = f.label :condition_id, "商品の状態"
-            %span 必須
-          %td
-            = f.collection_select :condition_id, Condition.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
-
-        %tr
-          %th
-            = f.label :postage_id, "配送料の負担"
-            %span 必須
-          %td
-            = f.collection_select :postage_id, Postage.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
-        %tr
-          %th
-            = f.label :shipment_id, "発送までの日数"
-            %span 必須
-          %td
-            = f.collection_select :shipment_id, Shipment.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
-        %tr
-          %th
-            = f.label :prefecture_id, "発送元の地域"
-            %span 必須
-          %td
-            = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select"
-
-        %tr
-          %th
-            = f.label :price, "価格"
-            %span 必須
-          %td
-            = f.number_field :price, class: 'form-text', placeholder: ''
-
-    .InputForm--btn
-      = f.submit '出品する', class: 'Button' 
+        .sell__block__form__btn
+          %div
+            = f.submit "出品する",class: "btn-default__btn-red"
