--- a/app/assets/stylesheets/modules/formproduct.scss
+++ b/app/assets/stylesheets/modules/formproduct.scss
@@ -79,10 +79,10 @@
   //file_fieldのcss
   .hidden-content {
     .hidden-field {
-      display: none;
+      // display: none;
     }
     .hidden-checkbox {
-      display: none;
+      // display: none;
     }
   }
 }
