部分テンプレート修正

--- a/app/views/mypage/listings/index.html.haml
+++ b/app/views/mypage/listings/index.html.haml
@@ -14,52 +14,14 @@
           %li 売却済み
       %ul.Contents
         %li.Content.show
-          // #商品購入機能実装後、[= render "products_list"]に修正
           %table.ProductsList
             %tbody
-              %tr
-                %th
-                  = image_tag ('products/a001.png'), class: 'product_image'
-                %td{valign: "top"}
-                  商品名：product2
-                %td
-                  .Edit-btn
-                    = link_to "編集する", "#", class: 'btn-smole'
-                  .Edit-btn
-                    = link_to "削除する", "#", class: 'btn-smole'
-              %tr
-                %th
-                  = image_tag ('products/a003.png'), class: 'product_image'
-                %td{valign: "top"}
-                  商品名：product2
-                %td
-                  .Edit-btn
-                    = link_to "編集する", "#", class: 'btn-smole'
-                  .Edit-btn
-                    = link_to "削除する", "#", class: 'btn-smole'
+              = render partial: "product", collection: @products_sale
 
         %li.Content
-          // #商品購入機能実装後、[= render "products_list"]に修正
           %table.ProductsList
             %tbody
-              %tr
-                %th
-                  = image_tag ('products/a001.png'), class: 'product_image'
-                %td{valign: "top"}
-                  商品名：product2
-                %td
-                  .Edit-btn
-                    = link_to "編集する", "#", class: 'btn-smole'
-                  .Edit-btn
-                    = link_to "削除する", "#", class: 'btn-smole'
-              %tr
-                %th
-                  = image_tag ('products/a003.png'), class: 'product_image'
-                %td{valign: "top"}
-                  商品名：product2
-                %td
-                  .Edit-btn
-                    = link_to "配送完了", "#", class: 'btn-smole'
+              = render partial: "product", collection: @products_soldout
 
         %li.Content
           = render "products_list"
