FIX Color Desin

--- a/app/assets/stylesheets/modules/body_application.scss
+++ b/app/assets/stylesheets/modules/body_application.scss
@@ -33,7 +33,9 @@
 .Button:active {
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
-
+.link_color{
+  color: black;
+}
 .form-text{
   height: 40px;
   width: 100%;
