--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -97,5 +97,5 @@
 
         .sell__block__form__btn
           %div
-            = f.submit "出品する",class: "Button"
+            = f.submit "商品情報を編集",class: "Button"
         .sell__block__margin
